# OpenGL_Class

./: .gitignore  CMakeLists.txt  README.md
cmake/default/: Dependency.cmake
include/: common.h  context.h  program.h  shader.h
include/glad/: glad.h
shader/: simple.frag  simple.vert
src/: common.cpp  context.cpp  glad.c  main.cpp  program.cpp  shader.cpp
